added css and html

--- a/css.selektorer.html
+++ b/css.selektorer.html
@@ -9,7 +9,10 @@
 <body>
   
   
-<div class="svartrektangel"><div class="inutirektangel"></div></div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  
+<div class="svartrektangel"></div>
+<div class="vitrektangel"></div> 
+  <div class="gronrektangel"></div>'
+  <br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
